# bgp-conflict-detector

./: .gitignore  .gitlab-ci.yml  API_KEYS.md  CLEANUP_SUMMARY.md  ENABLE_REPO_SCOPE.md  FINAL_PUSH_SOLUTION.md  GITHUB_PUSH_INSTRUCTIONS.md  HOW_TO_GET_API_KEYS.md  HOW_TO_RUN.md  IMPLEMENTATION_SUMMARY.md  INSTALL_DOCKER.md  PUSH_TO_GITHUB.md  PUSH_WITH_TOKEN.md  README.md  check_docker.ps1  demo-runner.ps1  demo-runner.sh  demo_without_docker.py  docker-compose.yml  requirements.txt  start_ui.ps1  start_ui.sh  validate_everything.sh  validate_setup.py
bgp-orchestrator/backend/: ML_IMPLEMENTATION.md  NEXT_STEPS.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
bgp-orchestrator/backend/alembic/: env.py
bgp-orchestrator/backend/alembic/versions/: 001_add_anomalies_table.py
bgp-orchestrator/backend/alerting/: __init__.py  notifiers.py  oncall.py  templates.py
bgp-orchestrator/backend/app/: config.py  dependencies.py  main.py
bgp-orchestrator/backend/app/middleware/: __init__.py  (+3 more)
bgp-orchestrator/backend/core/: __init__.py  conflict_detector.py
bgp-orchestrator/backend/data/: __init__.py  bgpstream.py  bmp.py  sources.py
bgp-orchestrator/backend/docs/: api.md  architecture.md  deployment.md
bgp-orchestrator/backend/ml/: __init__.py  bgp_flap_predictor.py
bgp-orchestrator/backend/models/: __init__.py  anomaly.py  entities.py  peering.py
bgp-orchestrator/backend/observability/: __init__.py  anomaly_detector.py  metrics.py  pyroscope_integration.py  victoriametrics_integration.py
bgp-orchestrator/backend/schemas/: __init__.py  entities.py  peering.py
bgp-orchestrator/backend/scripts/: dev.sh  run_migrations.py  train_model.py
bgp-orchestrator/backend/security/: __init__.py  audit.py  auth.py  encryption.py
bgp-orchestrator/backend/services/: __init__.py  batfish_client.py  ripe_ris_client.py  suzieq_client.py  victoriametrics_client.py
bgp-orchestrator/backend/storage/: __init__.py  influxdb.py  redis.py
bgp-orchestrator/backend/streaming/: __init__.py  bgp_consumer.py  materialization_job.py
bgp-orchestrator/backend/tests/: conftest.py
bgp-orchestrator/backend/utils/: __init__.py  circuit_breaker.py  logger.py  radix_tree.py  validators.py
(+110 files in other folders)
